Реализована авторизация по jwt: Контроллер и сервис для аутентификации по логину и паролю, фильтр аутентификации по jwt и утилитный класс для работы с jwt. Удален SecurityUser
