# src/main/java/com/example/bankcards/security/dto/JwtRequest.java
@@ -1,0 +1,15 @@
+package com.example.bankcards.security.dto;
+
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.experimental.FieldDefaults;
+
+/**
+ * DTO класс для запроса на аутентификацию
+ */
+@Data
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class JwtRequest {
+    String username;
+    String password;
+}
